--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,71 @@
 .App {
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100% !important;
+  min-height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.App-container {
+  min-width: 120vh !important;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  color: #3182ce;
   display: flex;
   flex-direction: column;
+  font-weight: bolder;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-bottom: 30px;
+  font-size: calc(20px + 2vmin);
+}
+
+.bg {
+  background-image: url("./assets/bg.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.bg2 {
+  background-image: url("./assets/bg2.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.icon{
+  width: 24px;
+  height: 24px;
+}
+
+.icon-sm{
+  width: 16px;
+  height: 16px;
+}
+
+.icon, .tab {
+  display: block;
+}
+@media(max-width: 768px) {
+  .App-container {
+    min-width: 85vh !important;
+  }
+  .tab {
+    display:none;
+  }
+  .icon {
+    display: block;
+  }
+}
+
+.link {
+  color: #2a4365;
+  transition: all 0.3s ease;
+  cursor: pointer;
+}
+
+.link:hover {
+  color: #3182ce;
 }
 
 .App-link {
